--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
  <header>
     <h1>Mario club</h1>
  </header>
-
- <section class="banner">
+ <section class="barnner">
     <img src="img/banner.png" alt="mario club">
  
  <div class="welcome">
@@ -20,7 +19,6 @@
 
  </div>
 </section>
-
 <nav class="main-nav">
     <ul>
         <li><a href="/join.html" class="join">Join a club</a> </li>
